--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
+    "@types/xml2js": "^0.4.14",
     "rimraf": "^5.0.10",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "@playwright/test": "^1.57.0"
+  },
+  "dependencies": {
+    "xlsx": "^0.18.5",
+    "xml2js": "^0.6.2"
   }
 }
