--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
     "rimraf": "^5.0.10",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
     "@playwright/test": "^1.57.0"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0"
   }
 }
