--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   },
   "peerDependencies": {
     "@playwright/test": "^1.57.0"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0"
   }
 }
