--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "xlsx": "^0.18.5",
     "xml2js": "^0.6.2",
     "date-fns": "^4.1.0",
-    "date-fns-tz": "^3.2.0"
+    "date-fns-tz": "^3.2.0",
+    "pdf-parse": "^1.1.1"
   }
 }
