--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@playwright/test": "^1.57.0"
   },
   "dependencies": {
+    "@anddone/coretestautomation": "^1.0.3",
     "@siddheshwar.anajekar/common-base": "^3.0.2",
     "anddonejs1": "^3.0.2",
     "date-fns": "^4.1.0",
