--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test tests/adminLogin.spec.ts tests/coverageFilter.spec.ts tests/programSync.spec.ts
+      run: npx playwright test tests/adminLogin.spec.ts tests/coverageFilter.spec.ts tests/programSync.spec.ts tests/adminDataSync.spec.ts 
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
